--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ cachetools==5.3.1
 certifi==2023.7.22
 charset-normalizer==3.3.0
 click==8.1.7
+cmake>=3.15
 colorama==0.4.6
 contourpy>=1.2
 cycler==0.12.1
